# dynprog_cuda

./: .gitignore  CMakeLists.txt  README.md  cu_dp_cost2go.cu  cu_speed_cost2go.cu  dp_utils.h  prob_utils.h  run_dp_cost2go.cpp  run_simple.cpp  simple.cu
notebooks/: Untitled.ipynb
notebooks/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
report/: .gitignore  report.tex
